fix: again suffix gap

--- a/scss/forms/_text-input.scss
+++ b/scss/forms/_text-input.scss
@@ -287,7 +287,7 @@
       .text-input-field,
       .input-container,
       label {
-        padding-right: calc(var(--#{$prefix}text-input-trailing-action-width) + var(--#{$prefix}text-input-column-gap-trailing-error)); // stylelint-disable-line function-disallowed-list
+        padding-right: calc(var(--#{$prefix}text-input-trailing-action-width) + var(--#{$prefix}text-input-column-gap-trailing-error) + var(--#{$prefix}text-input-column-gap)); // stylelint-disable-line function-disallowed-list
       }
 
       &:has(> button) {
